--- a/_posts/CM/2020-12-15-EnergyPlus-b059d346a72e3e7e10a8a67b60c72100c190d8e3-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/CM/2020-12-15-EnergyPlus-b059d346a72e3e7e10a8a67b60c72100c190d8e3-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,9 +3,9 @@ title: EnergyPlus-b059d346a72e3e7e10a8a67b60c72100c190d8e3-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-b059d346a72e3e7e10a8a67b60c72100c190d8e3-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-12-15 14:22:07'
+date: '2020-12-15 14:46:13'
 unhandled_failure: false
-build_error_count: 0
+build_error_count: 5
 build_warning_count: 0
 package_error_count: 0
 package_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 125.375446
+test_time: 1.054742
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -55,7 +55,41 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "234",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "The source directory; ; /Users/commbldg/ci/clone_branch/third_party"
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "287",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "set_target_properties Can not find target to add properties to: btwxt_tests; "
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "288",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "set_target_properties Can not find target to add properties to: kiva_tests; "
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "290",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "penumbra_tests; "
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": "298",
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "include could not find load file:; ; cmake/Fortran.cmake"
+    }
   ],
   "test_results": [
 
@@ -69,9 +103,9 @@ performance_test_count: 0
     "permalink": "EnergyPlus-b059d346a72e3e7e10a8a67b60c72100c190d8e3-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-12-15 14:22:07",
+    "date": "2020-12-15 14:46:13",
     "unhandled_failure": false,
-    "build_error_count": 0,
+    "build_error_count": 5,
     "build_warning_count": 0,
     "package_error_count": 0,
     "package_warning_count": 0,
@@ -95,10 +129,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 125.375446,
+    "test_time": 1.054742,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
