--- a/_posts/CM/2020-12-15-EnergyPlus-9b3c4b746395e3ae25da15dd3251ed08b436cc9d-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/CM/2020-12-15-EnergyPlus-9b3c4b746395e3ae25da15dd3251ed08b436cc9d-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,9 +3,9 @@ title: EnergyPlus-9b3c4b746395e3ae25da15dd3251ed08b436cc9d-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-9b3c4b746395e3ae25da15dd3251ed08b436cc9d-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-12-15 16:10:26'
+date: '2020-12-15 16:34:53'
 unhandled_failure: false
-build_error_count: 0
+build_error_count: 4
 build_warning_count: 0
 package_error_count: 0
 package_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 163.699623
+test_time: 1.072178
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -55,7 +55,34 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock_main\" which requires target \"project_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock_main\" which requires target \"project_options\" that is not in any export set.; CMake Generate step failed.  Build files cannot be regenerated correctly."
+    }
   ],
   "test_results": [
 
@@ -69,9 +96,9 @@ performance_test_count: 0
     "permalink": "EnergyPlus-9b3c4b746395e3ae25da15dd3251ed08b436cc9d-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-12-15 16:10:26",
+    "date": "2020-12-15 16:34:53",
     "unhandled_failure": false,
-    "build_error_count": 0,
+    "build_error_count": 4,
     "build_warning_count": 0,
     "package_error_count": 0,
     "package_warning_count": 0,
@@ -95,10 +122,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 163.699623,
+    "test_time": 1.072178,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
