--- a/_posts/CM/2020-12-16-EnergyPlus-b44b78762de6a57c5be31f9e0700f4af01426ba3-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/CM/2020-12-16-EnergyPlus-b44b78762de6a57c5be31f9e0700f4af01426ba3-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,9 +3,9 @@ title: EnergyPlus-b44b78762de6a57c5be31f9e0700f4af01426ba3-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-b44b78762de6a57c5be31f9e0700f4af01426ba3-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-12-16 05:56:57'
+date: '2020-12-16 06:22:18'
 unhandled_failure: false
-build_error_count: 0
+build_error_count: 8
 build_warning_count: 0
 package_error_count: 0
 package_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 134.943946
+test_time: 1.069435
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -55,7 +55,62 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock_main\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock_main\" which requires target \"project_fp_options\" that is not in any export set.; CMake Generate step failed.  Build files cannot be regenerated correctly."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest\" which requires target \"project_fp_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest\" which requires target \"project_fp_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_fp_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_fp_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest_main\" which requires target \"project_fp_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_fp_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_fp_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock_main\" which requires target \"project_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock\" which requires target \"project_fp_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock_main\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gmock_main\" which requires target \"project_fp_options\" that is not in any export set."
+    },
+    {
+      "filename": "CMakeLists.txt",
+      "linenumber": 1,
+      "colnumber": 0,
+      "messagetype": "error",
+      "message": "CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest\" which requires target \"project_options\" that is not in any export set.; CMake Error: install(EXPORT \"GTestTargets\" ...) includes target \"gtest\" which requires target \"project_fp_options\" that is not in any export set."
+    }
   ],
   "test_results": [
 
@@ -69,9 +124,9 @@ performance_test_count: 0
     "permalink": "EnergyPlus-b44b78762de6a57c5be31f9e0700f4af01426ba3-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-12-16 05:56:57",
+    "date": "2020-12-16 06:22:18",
     "unhandled_failure": false,
-    "build_error_count": 0,
+    "build_error_count": 8,
     "build_warning_count": 0,
     "package_error_count": 0,
     "package_warning_count": 0,
@@ -95,10 +150,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 134.943946,
+    "test_time": 1.069435,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
