--- a/_posts/CM/2020-12-16-EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/CM/2020-12-16-EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,10 +3,10 @@ title: EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-12-16 21:01:23'
+date: '2020-12-16 21:28:42'
 unhandled_failure: false
-build_error_count: 0
-build_warning_count: 0
+build_error_count: 1
+build_warning_count: 1
 package_error_count: 0
 package_warning_count: 0
 test_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 266.426056
+test_time: 1.139494
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -55,7 +55,20 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "../../../../Library/Developer/CommandLineTools/usr/include/c++/v1/memory",
+      "linenumber": "2339",
+      "colnumber": "5",
+      "messagetype": "warning",
+      "message": "delete called on 'FenestrationCommon::ISeriesPoint' that is abstract but has non-virtual destructor [-Wdelete-abstract-non-virtual-dtor]"
+    },
+    {
+      "filename": "third_party/kiva-ep/src/libkiva/Algorithms.hpp",
+      "linenumber": "11",
+      "colnumber": "10",
+      "messagetype": "fatal error",
+      "message": "'libkiva_export.h' file not found"
+    }
   ],
   "test_results": [
 
@@ -69,10 +82,10 @@ performance_test_count: 0
     "permalink": "EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-12-16 21:01:23",
+    "date": "2020-12-16 21:28:42",
     "unhandled_failure": false,
-    "build_error_count": 0,
-    "build_warning_count": 0,
+    "build_error_count": 1,
+    "build_warning_count": 1,
     "package_error_count": 0,
     "package_warning_count": 0,
     "test_count": 0,
@@ -95,10 +108,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 266.426056,
+    "test_time": 1.139494,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
