--- a/_posts/CM/2020-12-16-EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-Linux-Ubuntu-18.04-gcc-7.5-results.html
+++ b/_posts/CM/2020-12-16-EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-Linux-Ubuntu-18.04-gcc-7.5-results.html
@@ -3,10 +3,10 @@ title: EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-Linux-Ubuntu-18.04-gcc-7.5.html
 tags: data
 layout: ci_results
-date: '2020-12-16 20:57:15'
+date: '2020-12-16 21:29:00'
 unhandled_failure: false
-build_error_count: 0
-build_warning_count: 0
+build_error_count: 1
+build_warning_count: 5
 package_error_count: 0
 package_warning_count: 0
 test_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-18.04-gcc-7.5
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 203.585320867
+test_time: 1.036412207
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -49,13 +49,54 @@ coverage_functions: 0
 coverage_total_functions: 0
 coverage_url: 
 asset_url: 
-performance_total_time: 
+performance_total_time: 0
 performance_test_count: 0
 
 ---
 {
   "build_results": [
-
+    {
+      "filename": "third_party/kiva-ep/src/libkiva/Aggregator.cpp",
+      "linenumber": "87",
+      "colnumber": "22",
+      "messagetype": "warning",
+      "message": "‘Tz’ may be used uninitialized in this function [-Wmaybe-uninitialized]"
+    },
+    {
+      "filename": "third_party/kiva-ep/src/libkiva/Aggregator.cpp",
+      "linenumber": "88",
+      "colnumber": "21",
+      "messagetype": "warning",
+      "message": "‘Tr’ may be used uninitialized in this function [-Wmaybe-uninitialized]"
+    },
+    {
+      "filename": "third_party/kiva-ep/src/libkiva/Algorithms.hpp",
+      "linenumber": "11",
+      "colnumber": "10",
+      "messagetype": "fatal error",
+      "message": "libkiva_export.h: No such file or directory"
+    },
+    {
+      "filename": "third_party/kiva-ep/src/libkiva/Ground.cpp",
+      "linenumber": "75",
+      "colnumber": "0",
+      "messagetype": "warning",
+      "message": "ignoring #pragma omp parallel [-Wunknown-pragmas]"
+    },
+    {
+      "filename": "third_party/kiva-ep/src/libkiva/Ground.cpp",
+      "linenumber": "77",
+      "colnumber": "0",
+      "messagetype": "warning",
+      "message": "ignoring #pragma omp section [-Wunknown-pragmas]"
+    },
+    {
+      "filename": "third_party/kiva-ep/src/libkiva/Ground.cpp",
+      "linenumber": "79",
+      "colnumber": "0",
+      "messagetype": "warning",
+      "message": "ignoring #pragma omp section [-Wunknown-pragmas]"
+    }
   ],
   "test_results": [
 
@@ -69,10 +110,10 @@ performance_test_count: 0
     "permalink": "EnergyPlus-38ddd741cb494a3a0ede4f68de8527c544492230-x86_64-Linux-Ubuntu-18.04-gcc-7.5.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-12-16 20:57:15",
+    "date": "2020-12-16 21:29:00",
     "unhandled_failure": false,
-    "build_error_count": 0,
-    "build_warning_count": 0,
+    "build_error_count": 1,
+    "build_warning_count": 5,
     "package_error_count": 0,
     "package_warning_count": 0,
     "test_count": 0,
@@ -95,10 +136,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-18.04-gcc-7.5",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 203.585320867,
+    "test_time": 1.036412207,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
@@ -115,8 +156,15 @@ performance_test_count: 0
     "coverage_total_functions": 0,
     "coverage_url": null,
     "asset_url": null,
-    "performance_total_time": null,
+    "performance_total_time": 0,
     "performance_test_count": 0
   },
-  "performance_results": null
+  "performance_results": {
+    "object_files": [
+
+    ],
+    "test_files": [
+
+    ]
+  }
 }
