--- a/_posts/CM/2020-12-17-EnergyPlus-8cd400a1d2c7a65fbbed89e32c8d6ad8c4ebe666-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/CM/2020-12-17-EnergyPlus-8cd400a1d2c7a65fbbed89e32c8d6ad8c4ebe666-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,10 +3,10 @@ title: EnergyPlus-8cd400a1d2c7a65fbbed89e32c8d6ad8c4ebe666-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-8cd400a1d2c7a65fbbed89e32c8d6ad8c4ebe666-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-12-17 00:31:52'
+date: '2020-12-17 01:07:48'
 unhandled_failure: false
 build_error_count: 0
-build_warning_count: 0
+build_warning_count: 4
 package_error_count: 0
 package_warning_count: 0
 test_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 802.164241
+test_time: 1.112967
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -55,7 +55,34 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "../../../../Library/Developer/CommandLineTools/usr/include/c++/v1/memory",
+      "linenumber": "2339",
+      "colnumber": "5",
+      "messagetype": "warning",
+      "message": "delete called on 'FenestrationCommon::ISeriesPoint' that is abstract but has non-virtual destructor [-Wdelete-abstract-non-virtual-dtor]"
+    },
+    {
+      "filename": "tst/EnergyPlus/api/TestFunctional.c",
+      "linenumber": "54",
+      "colnumber": "23",
+      "messagetype": "warning",
+      "message": "unused parameter 'errortype' [-Wunused-parameter]"
+    },
+    {
+      "filename": "tst/EnergyPlus/api/TestFunctional.c",
+      "linenumber": "54",
+      "colnumber": "47",
+      "messagetype": "warning",
+      "message": "unused parameter 'message' [-Wunused-parameter]"
+    },
+    {
+      "filename": "tst/EnergyPlus/api/TestFunctional.c",
+      "linenumber": "91",
+      "colnumber": "12",
+      "messagetype": "warning",
+      "message": "unused variable 'enthDifference' [-Wunused-variable]"
+    }
   ],
   "test_results": [
 
@@ -69,10 +96,10 @@ performance_test_count: 0
     "permalink": "EnergyPlus-8cd400a1d2c7a65fbbed89e32c8d6ad8c4ebe666-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-12-17 00:31:52",
+    "date": "2020-12-17 01:07:48",
     "unhandled_failure": false,
     "build_error_count": 0,
-    "build_warning_count": 0,
+    "build_warning_count": 4,
     "package_error_count": 0,
     "package_warning_count": 0,
     "test_count": 0,
@@ -95,10 +122,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 802.164241,
+    "test_time": 1.112967,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
