--- a/_posts/8376-FSM/2021-01-21-EnergyPlus-7d66cb29db17b6d67ff2fea4d37acf93d84763cc-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/8376-FSM/2021-01-21-EnergyPlus-7d66cb29db17b6d67ff2fea4d37acf93d84763cc-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-7d66cb29db17b6d67ff2fea4d37acf93d84763cc-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-7d66cb29db17b6d67ff2fea4d37acf93d84763cc-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2021-01-21 21:34:51'
+date: '2021-01-21 21:57:58'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 2.468174
+test_time: 1.008699
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-7d66cb29db17b6d67ff2fea4d37acf93d84763cc-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2021-01-21 21:34:51",
+    "date": "2021-01-21 21:57:58",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,10 +95,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 2.468174,
+    "test_time": 1.008699,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
