--- a/_posts/UGJ/2021-02-04-EnergyPlus-996bf1e6320696e2d8179912973e71e05b6f9596-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/UGJ/2021-02-04-EnergyPlus-996bf1e6320696e2d8179912973e71e05b6f9596-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-996bf1e6320696e2d8179912973e71e05b6f9596-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-996bf1e6320696e2d8179912973e71e05b6f9596-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2021-02-04 18:51:17'
+date: '2021-02-04 19:15:54'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 2.503116
+test_time: 1.013792
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-996bf1e6320696e2d8179912973e71e05b6f9596-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2021-02-04 18:51:17",
+    "date": "2021-02-04 19:15:54",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,10 +95,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 2.503116,
+    "test_time": 1.013792,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
